2004-10-13  Richard Henderson  <rth@redhat.com>

	PR debug/13841
	* function.c (instantiate_decl): Recurse for CONCAT.

2004-10-13  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR target/14454
	* config/sparc/sparc.c (TARGET_ASM_CAN_OUTPUT_MI_THUNK): Set to
	sparc_can_output_mi_thunk.
	(sparc_output_mi_thunk): Simplify handling of delta offset.  Add
	handling of vcall offset.
	(sparc_can_output_mi_thunk): New predicate.
	* doc/tm.texi (TARGET_ASM_OUTPUT_MI_THUNK): Document VCALL_OFFSET.
	(TARGET_ASM_OUTPUT_MI_VCALL_THUNK): Delete.
	(TARGET_ASM_CAN_OUTPUT_MI_THUNK): New target hook.

	* config/sparc/sparc.md (movdi): Remove redundant test.

2004-10-12  Richard Henderson  <rth@redhat.com>

	PR rtl-opt/17503
	* regclass.c (subregs_of_mode): Turn into an htab.  Make static.
	(som_hash, som_eq): New.
	(init_subregs_of_mode, record_subregs_of_mode): New.
	(cannot_change_mode_set_regs): Rewrite for htab implementation.
	(invalid_mode_change_p): Likewise.
	* combine.c (gen_lowpart_for_combine): Use record_subregs_of_mode.
	* flow.c (mark_used_regs): Likewise.
	(life_analysis): Use init_subregs_of_mode.
	* regs.h (subregs_of_mode): Remove.
	* rtl.h (init_subregs_of_mode, record_subregs_of_mode): Declare.

2004-10-10  Roger Sayle  <roger@eyesopen.com>

	PR rtl-optimization/17853
	* combine.c (combine_simplify_rtx): Don't attempt any simplifications
	of vector mode comparison operators.
	* cse.c (fold_rtx): Likewise.
	* simplify-rtx.c (simplify_gen_relational):  Avoid calling
	simplify_relational_operation with vector mode comparison operators.
	(simplify_rtx): Likewise.

2004-10-09  Joseph S. Myers  <joseph@codesourcery.com>

	* config/rs6000/spe.h (atosfix16, atosfix32, atosfix64, atoufix16,
	atoufix32, atoufix64, strtosfix16, strtosfix32, strtosfix64,
	strtoufix16, strtoufix32, strtoufix64): Declare.

2004-10-08  Andrew Pinski  <pinskia@physics.uc.edu>

	PR c/16999
	* c-ppoutput.c (cb_ident): Don't quote string as it is already
	quoted.
